<resources>
    <string name="app_name">MyLogin</string>
    <string name="signin">Signin</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
</resources>